dygraphs 0.9 (unreleased)
--------------------------------------------------------------------------------

* Handle vector data in dyEvent

* Don't do sizeChanged polling (no longer required)


dygraphs 0.8
--------------------------------------------------------------------------------

* Manage visibility of dygraphs in all types of boostrap tab panes

* Call widget.resize whenever parent size changes


dygraphs 0.7
--------------------------------------------------------------------------------

* Ensure that dygraphs are shown properly in R Markdown tabsets 

* Ensure that dygraphs are shown properly in reveal.js presentations

* Fix bug which prevented custom plotters from working in dySeries


dygraphs 0.6
--------------------------------------------------------------------------------

* Add support for plotting data with a numeric x-axis (previously only time series
  data was accepted).

* Add new logscale option for numeric x-axis.

* Add stemPlot option to dyOptions and dySeries.


dygraphs 0.5
--------------------------------------------------------------------------------

* Update embedded dygraphs to version 1.1

* Add support for show='follow' to dyLegend

* Add labelsUTC option to dyOptions

* Change default x axis label width to 60 (necessitated by changes to default
  dygraphs 1.1 x-axis year formatting)

* Allow explicit specification of series periodicity when creating a dygraph 


dygraphs 0.4.5
--------------------------------------------------------------------------------

* Correct serialization of dates with year < 1000

* Add axis argument to dyShading for horizontal shading

* Add dyLimit function for drawing horizontal limit lines

* Add retainDateWindow option for more flexibility as to whether
  the user data window (zoom level) is retained when updating
  data and/or options for an existing dygraph.
  
* Fix infinite redraw issue which occurred with shiny uiOutput
  and grouped dygraphs.
  