@@ -103,6 +103,18 @@ HTMLWidgets.widget({
     this.addShadingCallback(x);
     this.addEventCallback(x);
     this.addZoomCallback(x, instance);
+    
+    // disable y-axis touch events on mobile phones
+    if (attrs.mobileDisableYTouch !== false && this.isMobilePhone()) {
+      // create default interaction model if necessary
+      if (!attrs.interactionModel)
+        attrs.interactionModel = Dygraph.Interaction.defaultModel;
+      // disable y touch direction
+      attrs.interactionModel.touchstart = function(event, dygraph, context) {
+        Dygraph.defaultInteractionModel.touchstart(event, dygraph, context);
+        context.touchDirections = { x: true, y: false };
+      };
+    }
 
     // if there is no existing instance perform one-time initialization
     if (!instance.dygraph) {
@@ -668,6 +680,17 @@ HTMLWidgets.widget({
       date = new Date(localAsUTC);
     }
     return date;
+  },
+  
+  // safely detect rendering on a mobile phone
+  isMobilePhone: function() {
+    try
+    {
+      return ! window.matchMedia("only screen and (min-width: 768px)").matches;
+    }
+    catch(e) {
+      return false;
+    }
   }
   
 });
